[tool.poetry]
name = "audipy"
version = "0.1.0"
description = "Python Audible API library"
authors = ["Ricky Grassmuck"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
requests-core = "^0.0.0"
requests = "^2.21"
click = "^7.0"
browser_cookie3 = "^0.7.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
